tests/NormalTests/paczka1/small_fuzzy/41119038.err
Error in line 2: NRFXd S73 28,9
Error in line 12: 9pIYy2p0Hja S651 74,2
Error in line 8: cNwtMwLND S232 69,7
Error in line 9: ckvBLBn S232 48,0
